--- a/css/style.css
+++ b/css/style.css
@@ -646,8 +646,7 @@ p {
   padding: 0 2em 0 6em;
 }
 .hvad-er-storytelling img {
-  max-width: 100%;
-  margin: 0 6em 0 0;
+  width: 100%;
 }
 
 .hvorfor-storytelling {
