--- a/css/style.scss
+++ b/css/style.scss
@@ -672,8 +672,7 @@ p{
         }
 
         img{
-            max-width: 100%;
-            margin: 0 6em 0 0;
+            width: 100%;
         }
 }
 
