--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -190,6 +190,7 @@ p{
 
 .hvad-er-storytelling{
     height: 500px;
+    
 }
 
 .hvad-er-storytelling .baalsted{
@@ -199,6 +200,7 @@ p{
 
 .hvorfor-storytelling{
     padding: 4em;
+    margin-top: 12em;
 }
 
 .case{
@@ -265,6 +267,10 @@ p{
     margin: 60px 0 0 0;
 }
 
+.omos-logo-txt img{
+    padding-bottom: 25px;
+}
+
 .startup-os-img {
     left: 25%;  
   }
@@ -282,13 +288,14 @@ p{
     justify-content: center;
     align-items: center;
     padding: 0;
-    margin: 0 4em 0 4em;
+    margin: 0;
     
 }
 
 .kontaktinformation{
     width: 100%;
     text-align: center;
+    padding: 0 70px 0 70px;
     padding-bottom: 70px;
         h1{
             padding-bottom: 50px;
@@ -370,6 +377,11 @@ p{
     flex-direction: column;
 }
 
+.hero-img-mobil img{
+    margin-right: 6em;
+    margin-top: 4em;
+}
+
 .hero-img{
     justify-content: center;
     width: 120%;
@@ -406,7 +418,7 @@ footer{
 
 .footer-logo-placering{
     display: flex;
-    justify-content: center;
+    text-align: center;
     margin-top: 2em;
 }
 
@@ -468,8 +480,8 @@ footer{
 /*******---forside--**********/
 
 .hero-section video{
-    width: 1%;
     margin-bottom: 0;
+    width: 100%;
 }
 .hero-content{
     padding: 0 30px 0 30px;
@@ -817,6 +829,7 @@ footer{
     display: flex;
     flex-direction: column;
     margin-top: 50px;
+    width: 100%;
 
     .beige-box1, .beige-box2{
         width: 80%;
@@ -824,7 +837,7 @@ footer{
     }
 
     .beige-box2{
-        justify-content: right;
+        align-self: flex-end;
     }
 }
 
@@ -902,7 +915,7 @@ main input[type=text], select, textarea {
 
 .faq-box1, .faq-box2{
     margin: 0;
-    padding: 10px 10px 10px 10px;
+    padding: 20px 10px 10px 20px;
     height: 100%; 
 }
 
