--- a/css/global.css
+++ b/css/global.css
@@ -102,7 +102,9 @@ h5{
     z-index: 2;
 }
 
-.menu{
+/*Lukket for forrige menu-hover indtil beslutning om ny*/
+
+/*.menu{
     writing-mode: vertical-lr;
     text-orientation: mixed;
     font-family: hobeaux, sans-serif;
@@ -113,6 +115,24 @@ h5{
 
 .menu:hover{
     -webkit-text-stroke: 2px #37476C;
+}*/
+
+.menu{
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    font-family: hobeaux, sans-serif;
+    font-size: 60px;
+    color: #AD5715;
+    font-weight: 700;
+    background: linear-gradient(to right, #AD5715 50%, #37476C 50%, #37476C);
+    background-size: 200%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: 0.5s ease-out;
+}
+
+.menu:hover{
+    background-position: -100%;
 }
 
 .dropdown{
