--- a/css/style.css
+++ b/css/style.css
@@ -295,12 +295,11 @@ p {
 }
 .brandingvideo .video-container {
   width: 80%;
-  height: 80%;
+  height: 500px;
   position: relative;
   overflow: hidden;
-  border: 2px solid #AD5715;
 }
-.brandingvideo .video-container video {
+.brandingvideo .video-container iframe {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
