--- a/css/style.scss
+++ b/css/style.scss
@@ -271,12 +271,11 @@ p{
         }
         .video-container{
             width: 80%;
-            height: 80%;
+            height: 500px;
             position: relative;
             overflow: hidden;
-            border: 2px solid partial.$secondary-color;
             
-                video{
+                iframe{
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
