--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,16 @@ p {
 
 /**********--Styling af Ydelser--***********/
 /*Hovedindhold*/
+.overlay .yd-streg2 {
+  width: 40%;
+  top: 40em;
+  left: 60%;
+}
+.overlay .yd-streg {
+  width: 60%;
+  top: -5em;
+}
+
 .stark-container {
   display: flex;
   align-self: center;
