--- a/css/style.scss
+++ b/css/style.scss
@@ -418,6 +418,20 @@ p{
 
  /*Hovedindhold*/
 
+.overlay { 
+
+    .yd-streg2{
+    width: 40%;
+    top: 40em;
+    left: 60%;
+    }
+
+    .yd-streg{
+    width: 60%;
+    top: -5em;
+}
+ }
+
  .stark-container{
     display: flex;
     align-self: center;
