Tilføjet streger til brandingproces.html

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -162,6 +162,24 @@ p{
 
     /********--Branding Proces--******/
 
+.overlay{
+
+    .bp-streg{
+        top: -4em;
+    }
+
+    .bp-streg1{
+        top: -9em;
+    }
+
+    .bp-streg2{
+        top: -7em;
+    }
+
+    .bp-streg3{
+        top: -5em;
+    }
+}
 
 .BGbranding{
     background-image: url(../img/BG-road-tablet.png);
@@ -728,6 +746,28 @@ footer{
 
 
 /*******---Branding proces--*******/
+
+.overlay {
+    .bp-streg{
+        width: 100%;
+    }
+
+    .bp-streg1{
+        width: 100%;
+        top: -8em;
+    }
+
+    .bp-streg2{
+        width: 100%;
+        top: -7em;
+    }
+
+    .bp-streg3{
+        width: 50%;
+        top: -5em;
+        left: 35%;
+    }
+}
 
 .BGbranding{
     background-image: url('../img/Road-mobil.png');
