Tilretning af stiblede linjer

--- a/css/style.scss
+++ b/css/style.scss
@@ -424,11 +424,13 @@ p{
     width: 40%;
     top: 40em;
     left: 60%;
+    z-index: -1;
     }
 
     .yd-streg{
     width: 60%;
     top: -5em;
+    z-index: -1;
 }
  }
 
