--- a/css/style.css
+++ b/css/style.css
@@ -428,10 +428,12 @@ p {
   width: 40%;
   top: 40em;
   left: 60%;
+  z-index: -1;
 }
 .overlay .yd-streg {
   width: 60%;
   top: -5em;
+  z-index: -1;
 }
 
 .stark-container {
