--- a/css/_partial.scss
+++ b/css/_partial.scss
@@ -25,13 +25,8 @@ $font: "roboto", sans-serif;
 
 @mixin btn-hover{
         background-color: transparent;
+        border-radius: 50px;
         border: 3px solid $secondary-color;
-        transition: 0.3s ease-in-out;
-        cursor: pointer;
         color: black;
+        cursor: pointer;
 }
-
-
-
-
-
