--- a/css/style.scss
+++ b/css/style.scss
@@ -759,6 +759,17 @@ p{
     text-align: center;
 }
 
+.roadtosucces2{
+    text-align: center;
+    padding: 0 9em;
+}
+
+.roadtosucces3{
+    text-align: center;
+    padding: 1em 9em 0 9em;
+    font-weight: 700;
+}
+
 
  /********--Styling af Storytelling--*******/
 
