--- a/css/style.scss
+++ b/css/style.scss
@@ -331,8 +331,12 @@ p{
     margin-bottom: 100px;
     padding: auto;
 
+        h4{
+            padding-top: 120px;
+        }
+
         h2{
-            padding-top: 140px;
+            padding-top: 20px;
         }
 
         .vi-tilbyder{
@@ -355,8 +359,7 @@ p{
 }
 
 .content-txt2{
-    grid-column: 3/6;
-    
+    grid-column: 3/6;    
 }
 
 .content-foto2{
