--- a/css/style.scss
+++ b/css/style.scss
@@ -1118,6 +1118,13 @@ p{
     }
 }
 
+/*foto af os*/
+.fotoafos img{
+    padding-top: 50px;
+    display: block;
+    margin: 0 auto;
+}
+
 /*Start up + pynt (billede på billede)*/
 .startup-omos{
     position: relative;
