--- a/css/style.scss
+++ b/css/style.scss
@@ -331,8 +331,12 @@ p{
     margin-bottom: 100px;
     padding: auto;
 
+        h4{
+            padding-top: 120px;
+        }
+
         h2{
-            padding-top: 140px;
+            padding-top: 20px;
         }
 
         .vi-tilbyder{
@@ -1104,6 +1108,14 @@ p{
         padding: 50px 50px 50px 50px ;
         border: 7px solid partial.$bg-color;
     }
+}
+
+.fotoafos{
+    width: 100%;
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*Start up + pynt (billede på billede)*/
