--- a/css/style.scss
+++ b/css/style.scss
@@ -27,7 +27,7 @@ h3{
     padding-bottom: 20px;
 }
 
-h4{
+.forh1, h4{
     font-family: partial.$font;
     font-size: 22px;
     text-transform: uppercase;
@@ -331,7 +331,7 @@ p{
     margin-bottom: 100px;
     padding: auto;
 
-        h4{
+        .forh1{
             padding-top: 120px;
         }
 
@@ -346,6 +346,7 @@ p{
 
 .content-txt{
     grid-column: 1/4;
+    padding: 0 2em 0 2em ;
 }
 
 .content-foto{
@@ -360,7 +361,7 @@ p{
 
 .content-txt2{
     grid-column: 3/6;
-    
+    padding: 0 2em 0 2em ;
 }
 
 .content-foto2{
