--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -914,6 +914,10 @@ footer{
         h2{
             font-size: 30px;
         }
+
+        .forh1{
+            font-size: 18px;
+        }
 }
 
 .info-os{
