--- a/css/style.scss
+++ b/css/style.scss
@@ -1168,6 +1168,7 @@ main input[type=submit]{
             background-color: partial.$primary-color;
             border: 3px solid partial.$secondary-color;
             transition: 0.3s ease-in-out;
+            color: black;
             cursor: pointer;
         }
     margin-top: 35px;
