--- a/css/style.css
+++ b/css/style.css
@@ -923,6 +923,20 @@ p {
   height: 360px;
   width: 290px;
 }
+.img-os a {
+  color: #37476c;
+  text-decoration: none;
+  font-family: "roboto", sans-serif;
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+}
+.img-os a:hover {
+  border: none;
+  font-weight: 800;
+  color: black;
+  cursor: pointer;
+}
 
 .overlay {
   position: relative;
